# Iranwar4

./: APK_COMPLETE_PACKAGE_GUIDE.md  APK_GUIDE.md  MOBILE_INSTALL_GUIDE.md  OFFLINE_WIFI_GUIDE.md  PWA_SETUP.md  README.md  WHATSAPP_SHARING_TEMPLATE.md  android-release.yml  build_apk.sh  buildozer.spec  buildozer_standalone.spec  client.py  game.js  game_launcher.py  game_logic.py  hotspot_game_app.py  index.html  iran_map.py  manifest.json  mobile_app.py  offline_index.html  offline_server.py  offline_simple_server.py  pyproject.toml  replit.md  server.py  simple_game.js  simple_server.py  standalone_apk_app.py  style.css  sw.js
