[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-socketio>=5.5.0",
    "flask>=3.1.1",
    "pygame>=2.6.1",
    "python-socketio==5.8.0",
    "python-engineio==4.7.1",
    "requests>=2.32.4",
    "buildozer>=1.5.0",
    "socketio>=0.2.1",
    "kivy>=2.3.1",
]
